feat: Implement dynamic API base URL loading from `config.json` via a new configuration service.

--- a/education_app/pubspec.yaml
+++ b/education_app/pubspec.yaml
@@ -85,6 +85,7 @@ l10n:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/icons/
+    - assets/config.json
 
   # To add custom fonts to your application, add a fonts section here,
   fonts:
