--- a/Backend/DigitalStore.Application/DigitalStore.Application.csproj
+++ b/Backend/DigitalStore.Application/DigitalStore.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\DigitalStore.Domain\DigitalStore.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
 </Project>
